src/App.scss
html{
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-image: linear-gradient(to right top, #051937, #004d7a, #008793, #00bf72, #a8eb12);
}
body{
  background:transparent;
  &.is-dragging{
    .pop-button, .magnet{
      transition:none;
      pointer-events: none;
    }
    .magnet-placeholder{
      display:block;
    }
    .pop-panel{
      opacity:.26;
    }
  }
}
#fridge-wrapper{
  position:relative;
}
#fridge{
  background:#CCC;
  position:relative;
  overflow:hidden;
  &.dark{
    background:#000;
    .magnet, .magnet-placeholder{
      background:#555;
      color:#FFF;
      border:1px solid #AAA;
    }
  }
}
.magnet{
  background:#FFF;
  position:absolute;
  display:inline-block;
  padding:5px;
  border:1px solid #CCC;
  transition:.3s ease all;
  cursor:move;
  font-size:1em;
}
.magnet-placeholder{
  background:#FFF;
  position:absolute;
  display:inline-block;
  padding:5px;
  border:1px solid #CCC;
  pointer-events:none;
  cursor:move;
  display:none;
  z-index:9999;
  box-shadow:0px 0px 3px 0px rgba(0,0,0,.25);
}
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome and Opera */
}
.card-header{
  h4{
    margin:0;
    padding:5px 0;
  }
}
.color-swatch{
  width:20px;
  height:20px;
  border-radius:20px;
  background-color:gray;
}
.pad-top{
  padding:40px;
}
/* -------------------------------- */
/* POP PANEL 
/* -------------------------------- */
.pop-panel{
  transition:.2s ease opacity;
  position:fixed;
  width:100vw;
  bottom:10px;
  right:0px;
  z-index:1000;
  pointer-events: none;
}
.pop-panel-inside{
  padding:10px;
}
.pop-button{
  float:right;
  pointer-events: all;
  margin-left:6px;
  pointer-events: all;
}

.pop-button{
  &.open{
    .pop-button-icon{
      box-shadow:0px 0px 0px 2px rgb(31, 210, 255);
      opacity:1;
    }
    .pop-button-action{
      display:block;
    }
  }
}
.pop-button-icon{
  position:relative;
  display:block;
  box-shadow:0px 0px 0px 0px rgb(31, 210, 255);
  transition:.2s ease all;
  width:50px;
  height:50px;
  background:#FFF;
  border:1px solid rgba(0,0,0,.55);
  cursor: pointer;
  text-align:center;
  opacity:.8;
  border-radius:50px;
  &:hover{
    border-color:rgba(0,0,0,.65);
    opacity:1;
  }
  i{
    color:#888;
    font-size:30px;
    line-height:47px;
  }
  .badge{
    position:absolute;
    left:-3px;
    top:-3px;
  }
}
.pop-button-action{
  display:none;
  position:relative;
}
.pop-button-panel{
  padding:5px;
  width:300px;
  position:absolute;
  right:0px;
  top:-320px;
  background:#FFF;
  border:1px solid #888;
  border-radius:8px;
}
.pop-button-panel:after, .pop-button-panel:before {
	top:100%;
	right: 15px;
	border: solid transparent;
	content: " ";
	height: 0;
	width: 0;
	position: absolute;
	pointer-events: none;
}
.pop-button-panel:after {
	border-color: rgba(255, 255, 255, 0);
	border-top-color: #ffffff;
	border-width: 10px;
}
.pop-button-panel:before {
	border-color: rgba(0, 0, 0, 0);
	border-top-color: #888;
  border-width: 11px;
  margin-right:-1px
}
/* -------------------------------- */
/* CHAT
/* -------------------------------- */
.chat{
  z-index:10;
  position:absolute;
  top:0;
  left:0;
}
.chat-messages{
  overscroll-behavior: none;
  border:1px solid #ced4da;
  margin-bottom:5px;
  border-radius:5px;
  height:200px;
  overflow-y:scroll;
}
.chat-message{
  padding:2px 5px;
  border-bottom:1px solid #EEE;
}
.chat-message:last-child{
  border:none;
}
.chat-user{
  font-weight:bold;
}
#chat-text{
  font-size:16px;
}
/* -------------------------------- */
/* Loading
/* -------------------------------- */
.loading{
  display: flex;
  align-items: center;
  justify-content: center;
  min-height:100px;
  height:100%;
}
.lds-ring {
  display: inline-block;
  position: relative;
  width: 64px;
  height: 64px;
}
.lds-ring div {
  box-sizing: border-box;
  display: block;
  position: absolute;
  width: 51px;
  height: 51px;
  margin: 6px;
  border: 6px solid rgb(31, 210, 255);
  border-radius: 50%;
  animation: lds-ring 1.2s cubic-bezier(0.5, 0, 0.5, 1) infinite;
  border-color: rgb(31, 210, 255) transparent transparent transparent;
}
.lds-ring div:nth-child(1) {
  animation-delay: -0.45s;
}
.lds-ring div:nth-child(2) {
  animation-delay: -0.3s;
}
.lds-ring div:nth-child(3) {
  animation-delay: -0.15s;
}
@keyframes lds-ring {
  0% {
    transform: rotate(0deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

.titlecase{
  text-transform: capitalize;
}
/* -------------------------------- */
/* Switch
/* -------------------------------- */
.switch {
  position: relative;
  display: block;
  width: 60px;
  height: 34px;
  float: right;
  margin-bottom:0;
  input {display:none;}
}
.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #777;
  -webkit-transition: .4s;
  transition: .4s;
}
.slider:before {
  position: absolute;
  content: "";
  height: 26px;
  width: 26px;
  left: 4px;
  bottom: 4px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}
input.default:checked + .slider {
  background-color: #444;
}
input.primary:checked + .slider {
  background-color: #2196F3;
}
input.success:checked + .slider {
  background-color: #28a745;
}
input.info:checked + .slider {
  background-color: #3de0f5;
}
input.warning:checked + .slider {
  background-color: #FFC107;
}
input.danger:checked + .slider {
  background-color: #f44336;
}
input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}
input:checked + .slider:before {
  -webkit-transform: translateX(26px);
  -ms-transform: translateX(26px);
  transform: translateX(26px);
}
.slider.round {
  border-radius: 34px;
}
.slider.round:before {
  border-radius: 50%;
}
.swal2-container{
  .swal2-title{
    text-transform: capitalize!important;
  }
}

